JumpScript/tests/baselines/reference/importNonStringLiteral.errors.txt
tests/cases/conformance/externalModules/vs/foo_0.jump(2,22): error TS1141: String literal expected.


==== tests/cases/conformance/externalModules/vs/foo_0.jump (1 errors) ====
    var x = "filename";
    import foo = require(x); // invalid
                         ~
!!! error TS1141: String literal expected.
    